--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-bubbles></app-bubbles>
+<app-visualizer></app-visualizer>
 
 <app-playlist-drawer [isOpen]="isDrawerOpen()" (close)="isDrawerOpen.set(false)"></app-playlist-drawer>
 
